--- a/.github/workflows/sv-tests-ci.yml
+++ b/.github/workflows/sv-tests-ci.yml
@@ -66,7 +66,8 @@ jobs:
       GHA_MACHINE_TYPE: "n2-highmem-16"
 
     name: ${{ matrix.tool.name }}
-    runs-on: [self-hosted, Linux, X64, gcp-custom-runners]
+    #runs-on: [self-hosted, Linux, X64, gcp-custom-runners]
+    runs-on: [Linux]
     container: ubuntu:jammy-20221130
     steps:
       - name: Cancel previous
