--- a/.github/workflows/sv-tests-ci.yml
+++ b/.github/workflows/sv-tests-ci.yml
@@ -80,33 +80,33 @@ jobs:
           echo "$SHELL"
       - name: Checkout code
         uses: actions/checkout@v2
-      - name: Update apt repos
-        run: |
-          apt-get update -qq
-      - name: Setup Node
-        run: |
-          apt -qq -y install curl
-          touch "$HOME/.bash_profile"
-          # From https://nodejs.org/en/download
-          curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.40.2/install.sh | bash
-          . "$HOME/.nvm/nvm.sh"
-          nvm install 22
-      - name: Add bazel repo (if needed)
-        if: ${{ contains(matrix.tool.deps, 'bazel') }}
-        run: |
-          apt -qq -y install apt-transport-https curl gnupg
-          curl -fsSL https://bazel.build/bazel-release.pub.gpg | gpg --dearmor > bazel.gpg
-          chmod a+r bazel.gpg
-          mv bazel.gpg /etc/apt/trusted.gpg.d/
-          echo "deb [arch=amd64] https://storage.googleapis.com/bazel-apt stable jdk1.8" | tee /etc/apt/sources.list.d/bazel.list
-          apt-get update -qq
-      - name: Install common dependencies
-        run: |
-          apt install -y python3 python3-pip git wget file
-          update-alternatives --install /usr/bin/python python /usr/bin/python3 1
-          update-alternatives --install /usr/bin/pip pip /usr/bin/pip3 1
-          pip install --upgrade setuptools
-          pip install -r conf/requirements.txt
+      # - name: Update apt repos
+      #   run: |
+      #     sudo apt-get update -qq
+      # - name: Setup Node
+      #   run: |
+      #     apt -qq -y install curl
+      #     touch "$HOME/.bash_profile"
+      #     # From https://nodejs.org/en/download
+      #     curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.40.2/install.sh | bash
+      #     . "$HOME/.nvm/nvm.sh"
+      #     nvm install 22
+      # - name: Add bazel repo (if needed)
+      #   if: ${{ contains(matrix.tool.deps, 'bazel') }}
+      #   run: |
+      #     apt -qq -y install apt-transport-https curl gnupg
+      #     curl -fsSL https://bazel.build/bazel-release.pub.gpg | gpg --dearmor > bazel.gpg
+      #     chmod a+r bazel.gpg
+      #     mv bazel.gpg /etc/apt/trusted.gpg.d/
+      #     echo "deb [arch=amd64] https://storage.googleapis.com/bazel-apt stable jdk1.8" | tee /etc/apt/sources.list.d/bazel.list
+      #     apt-get update -qq
+      # - name: Install common dependencies
+      #   run: |
+      #     apt install -y python3 python3-pip git wget file
+      #     update-alternatives --install /usr/bin/python python /usr/bin/python3 1
+      #     update-alternatives --install /usr/bin/pip pip /usr/bin/pip3 1
+      #     pip install --upgrade setuptools
+      #     pip install -r conf/requirements.txt
       - name: Install VeeR dependencies
         run: |
           apt install -y cpanminus
