--- a/.github/workflows/sv-tests-ci.yml
+++ b/.github/workflows/sv-tests-ci.yml
@@ -100,13 +100,13 @@ jobs:
       #     mv bazel.gpg /etc/apt/trusted.gpg.d/
       #     echo "deb [arch=amd64] https://storage.googleapis.com/bazel-apt stable jdk1.8" | tee /etc/apt/sources.list.d/bazel.list
       #     apt-get update -qq
-      # - name: Install common dependencies
-      #   run: |
-      #     apt install -y python3 python3-pip git wget file
-      #     update-alternatives --install /usr/bin/python python /usr/bin/python3 1
-      #     update-alternatives --install /usr/bin/pip pip /usr/bin/pip3 1
-      #     pip install --upgrade setuptools
-      #     pip install -r conf/requirements.txt
+      - name: Install common dependencies
+        run: |
+          # apt install -y python3 python3-pip git wget file
+          # update-alternatives --install /usr/bin/python python /usr/bin/python3 1
+          # update-alternatives --install /usr/bin/pip pip /usr/bin/pip3 1
+          pip install --upgrade setuptools
+          pip install -r conf/requirements.txt
       # - name: Install VeeR dependencies
       #   run: |
       #     apt install -y cpanminus
