--- a/.github/workflows/sv-tests-ci.yml
+++ b/.github/workflows/sv-tests-ci.yml
@@ -107,10 +107,10 @@ jobs:
           # update-alternatives --install /usr/bin/pip pip /usr/bin/pip3 1
           pip install --upgrade setuptools
           pip install -r conf/requirements.txt
-      # - name: Install VeeR dependencies
-      #   run: |
-      #     apt install -y cpanminus
-      #     cpanm Bit::Vector JSON
+      - name: Install VeeR dependencies
+        run: |
+          sudo apt install -y cpanminus
+          cpanm Bit::Vector JSON
       # - name: Install ccache
       #   if: ${{ !matrix.tool.skip-ccache }}
       #   run: |
